# Copyright © 2024 Giovanni Squillero <squillero@polito.it>
# https://github.com/squillero/computational-intelligence
# Free for personal or classroom use; see 'LICENSE.md' for details.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Giovanni Squillero <squillero@polito.it>"]
description = "Code and Notebook dependencies for Computational Intelligence (2023-24)"
license = "proprietary"
name = "ci"
version = "2023.1"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
isort = "^5.13.2"
icecream = "^2.1.3"
numpy = "^2.1.2"
joblib = "^1.4.2"
pandas = "^2.2.3"
geopy = "^2.4.1"
opencv-python = "^4.10.0.84"
imageio = "^2.36.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = { extras = ["jupyter"], version = "^24.10.0" }
nero = { extras = ["jupyter"], version = "^20.1" }
# ruff = "^0.7.1"
# mypy = "^1.13.0"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py310']
extend-exclude = "^venv$"
include = '(\.ipynb$|\.py$)'
line-length = 120
skip-string-normalization = true

[tool.ruff.format]
quote-style = "double"
